renamed fsa to jsfsa

--- a/specs/index.html
+++ b/specs/index.html
@@ -7,9 +7,9 @@
     <script type="text/javascript" src="../lib/jasmine-1.1.0/jasmine.js"></script>
     <script type="text/javascript" src="../lib/jasmine-1.1.0/jasmine-html.js"></script>
 
-    <script type="text/javascript" src="../src/fsa.js"></script>
-    <script type="text/javascript" src="spec.fsa.State.js"></script>
-    <script type="text/javascript" src="spec.fsa.Automaton.js"></script>
+    <script type="text/javascript" src="../src/jsfsa.js"></script>
+    <script type="text/javascript" src="spec.jsfsa.State.js"></script>
+    <script type="text/javascript" src="spec.jsfsa.Automaton.js"></script>
 </head>
 <body>
 <script type="text/javascript">
